Fix overlapping multiple instances of slideout plugin

--- a/assets/scss/framework/plugins/_slideout.scss
+++ b/assets/scss/framework/plugins/_slideout.scss
@@ -41,12 +41,8 @@ body {
 }
 
 @media screen and (min-width: 780px) {
-    .slideout-panel {
-        margin-left: 275px;
-    }
- 
-    .slideout-open{
-        border: 5px solid
-    }
-  }
-
+	.slideout-panel {
+		margin-left: 275px;
+		transform: translateX(0px);
+	}
+}
